--- a/style.css
+++ b/style.css
@@ -438,7 +438,7 @@ main .container .left .profile {
     margin-left: 0.5rem;
 }
 
-.main .container .right {
+.container .right {
     height: max-content;
     position: sticky;
     top: var(--sticky-top-right);
@@ -556,4 +556,239 @@ main .container .left .profile {
 .right .request .action {
     display: flex;
     gap: 1rem;
+}
+
+
+/* ------------ THEME CUSTOMIZATION ------------ */
+
+.customize-theme {
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    text-align: center;
+    display: grid;
+    place-items: center;
+    font-size: 0.9rem;
+    display: none;
+}
+
+.customize-theme .card {
+    background: var(--color-white);
+    padding: 3rem;
+    border-radius: var(--card-border-radius);
+    width: 50%;
+    z-index: 105;
+    box-shadow: 0 0 1rem var(--color-primary);
+}
+
+
+/* ------------ FONT SIZE ------------ */
+
+.customize-theme .font-size {
+    margin-top: 5rem;
+}
+
+.customize-theme .font-size>div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--color-light);
+    padding: var(--search-padding);
+    border-radius: var(--card-border-radius);
+}
+
+.customize-theme .choose-size {
+    background-color: var(--color-secondary);
+    height: 0.3rem;
+    width: 100%;
+    margin: 0 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.customize-theme .choose-size span {
+    width: 1rem;
+    height: 1rem;
+    background-color: var(--color-secondary);
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.customize-theme .choose-size span.active {
+    background-color: var(--color-primary);
+}
+
+
+/* ------------ COLORS ------------ */
+
+.customize-theme .color {
+    margin-top: 2rem;
+}
+
+.customize-theme .choose-color {
+    background-color: var(--color-light);
+    padding: var(--search-padding);
+    border-radius: var(--card-border-radius);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.customize-theme .choose-color span {
+    width: 2.2rem;
+    height: 2.2rem;
+    border-radius: 50%;
+}
+
+.customize-theme .choose-color span:nth-child(1) {
+    background-color: hsl(252, 75%, 60%);
+}
+
+.customize-theme .choose-color span:nth-child(2) {
+    background-color: hsl(38, 75%, 60%);
+}
+
+.customize-theme .choose-color span:nth-child(3) {
+    background-color: hsl(352, 75%, 60%);
+}
+
+.customize-theme .choose-color span:nth-child(4) {
+    background-color: hsl(152, 75%, 60%);
+}
+
+.customize-theme .choose-color span:nth-child(5) {
+    background-color: hsl(202, 75%, 60%);
+}
+
+.customize-theme .choose-color span.active {
+    border: 5px solid white;
+}
+
+
+/* ------------ BACKGROUND ------------ */
+
+.customize-theme .background {
+    margin-top: 2rem;
+}
+
+.customize-theme .choose-bg {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1.5rem;
+}
+
+.customize-theme .choose-bg>div {
+    padding: var(--card-padding);
+    display: flex;
+    width: 100%;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: bold;
+    border-radius: 0.4rem;
+    cursor: pointer;
+}
+
+.customize-theme .choose-bg>div.active {
+    border: 2px solid var(--color-primary);
+}
+
+.customize-theme .choose-bg .bg-1 {
+    background-color: white;
+    color: black;
+}
+
+.customize-theme .choose-bg .bg-2 {
+    background-color: hsl(252, 30%, 17%);
+    color: white;
+}
+
+.customize-theme .choose-bg .bg-3 {
+    background-color: hsl(252, 30%, 10%);
+    color: white;
+}
+
+.customize-theme .choose-bg>div span {
+    width: 2.2rem;
+    height: 2.2rem;
+    border-radius: 50%;
+    border: 2px solid var(--color-gray);
+    margin-right: 1rem;
+}
+
+
+/*====================================================================
+=            MEDIA QUERIES - SMALL LAPTOP AND BIG TABLETS            =
+=====================================================================*/
+
+@media screen and (max-width: 1200px) {
+    .container {
+        width: 96%;
+    }
+    main .container {
+        grid-template-columns: 5rem auto 30vw;
+        gap: 1rem;
+    }
+    .left {
+        width: 5rem;
+        z-index: 5;
+    }
+    main .container .left .profile {
+        display: none;
+    }
+    .sidebar h3 {
+        display: none;
+    }
+    .left .btn {
+        display: none;
+    }
+    .customize-theme .card {
+        width: 80vw;
+    }
+}
+
+
+/*====================================================================
+=            MEDIA QUERIES - SMALL TABLETS AND MOBILES PHONES        =
+=====================================================================*/
+
+@media screen and (max-width: 992px) {
+    nav .search-bar {
+        display: none;
+    }
+    main .container {
+        grid-template-columns: 0 auto 5rem;
+        gap: 0;
+    }
+    main .container .left {
+        grid-column: 3/4;
+        position: fixed;
+        top: 4.25rem;
+        right: 0;
+    }
+    .left .notifications-popup {
+        position: absolute;
+        left: -20rem;
+        width: 20rem;
+    }
+    .left .notifications-popup::before {
+        display: absolute;
+        top: 1.3rem;
+        left: calc(20rem - 0.6rem);
+        display: block;
+    }
+    main .container .middle {
+        grid-column: 1/3;
+    }
+    main .container .right {
+        display: none;
+    }
+    .customize-theme .card {
+        width: 92vw;
+    }
 }
